About text added

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This application Created by Ahmed Afifi.</p> 
+        <p>Data generated from Mapbox.com and Darksky.net</p>
         <img class="portrait" src="/img/user_photo.jpg" alt="Ahmed Afifi">
     </div>
 
